# cashflow-cli

./: .gitignore  AGENTS.md  Cargo.toml  DEV_SETUP.md  README.md
.github/workflows/: release.yml
scripts/: install.sh
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  projection.rs  storage.rs
src/cli/: args.rs  output.rs
src/commands/: balance.rs  config.rs  one_time.rs  plan.rs  recurring.rs
src/models/: data.rs
src/projection/: cashflow.rs
src/storage/: ron_storage.rs
