[package]
name = "cashflow"
version = "0.1.1"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.9"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal for money
rust_decimal = { version = "1.33", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Tables and formatting
comfy-table = "7.1"
colored = "3.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Home directory
dirs = "6.0"
